media/nzbget/nzbget.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  namespace: nzbget
  labels:
    app: nzbget
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nzbget
        image: nzbgetcom/nzbget:v25.2
        ports:
          - containerPort: 6789
        volumeMounts:
          - name: nzbget-config
            mountPath: /config
          - name: nzbget-downloads
            mountPath: /downloads
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 750m
            memory: 2Gi
      volumes:
        - name: nzbget-config
          persistentVolumeClaim:
            claimName: nzbget-pvc
        - name: nzbget-downloads
          persistentVolumeClaim:
            claimName: nzbget-download-pvc
